fix: disable dark mode support to website

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,13 @@
   background-color: #aaa;
 }
 
+/* Disable dark mode for the entire website */
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: light;
+  }
+}
+
 select {
   appearance: none;
   background-image: url(/dropdownIcon.svg);
